--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>PaintJs</title>
-</head>
-<body>
-        <script src="app.js"></script>
-</body>
+  </head>
+  <body>
+    <canvas id="jsCanvas" class="canvas"></canvas>
+    <div class="controls">
+      <div class="controls__range">
+        <input
+          type="range"
+          id="jsRange"
+          min="0.1"
+          max="5"
+          value="2.5"
+          step="0.1"
+        />
+      </div>
+      <div class="controls__btns">
+        <button id="jsMode">Fill</button>
+        <button id="jsSave">Save</button>
+      </div>
+      <div class="controls__colors" id="jsColors">
+        <div class="controls__color jsColor" style="background-color: #2c2c2c"></div>
+        <div class="controls__color jsColor" style="background-color: #535c68"></div>
+        <div class="controls__color jsColor" style="background-color: #eb4d4b"></div>
+        <div class="controls__color jsColor" style="background-color: #ff7979"></div>
+        <div class="controls__color jsColor" style="background-color: #4834d4"></div>
+        <div class="controls__color jsColor" style="background-color: #30336b"></div>
+        <div class="controls__color jsColor" style="background-color: #f0932b"></div>
+        <div class="controls__color jsColor" style="background-color: #badc58"></div>
+        <div class="controls__color jsColor" style="background-color: #6ab04c"></div>
+        <div class="controls__color jsColor" style="background-color: white"></div>
+    </div>
+    </div>
+
+    <script src="app.js"></script>
+  </body>
 </html>
